syntax = "proto3";

message BinaryCopyExec {
  string predicate = 1;
  PostgresTableAccess table_access = 2;
  repeated uint32 pg_types = 3;
  string connection_string = 4;
  TunnelOptions tunnel = 5;
  string query = 6;
}

message PostgresTableAccess {
  string schema = 1;
  string table = 2;
}

message TunnelOptions {
  oneof options {
    TunnelOptionsInternal internal = 1;
    TunnelOptionsDebug debug = 2;
    TunnelOptionsSsh ssh = 3;
  }
}
message TunnelOptionsInternal {}
message TunnelOptionsDebug {}

message TunnelOptionsSsh {
  string connection_string = 1;
  bytes ssh_key = 2;
}
